even if we label them (!), which was not previously possible
due to silliness with the SDIF library. Optionally, 1TRC
files can still be exported, but they are the sine-only 
ones that are described by the SdifTypes.STYP file. Our 
matrices contain irregularly-spaced bandwidth-enhanced
data, but no interpolated (bogus) data, so a frame may 
not contain breakpoints for all active Partials.

-------------------------------------------------------
changes since 1.0beta6 release:

- Improved Distiller operation.

- Changed iterator behavior in scripting interface (NOTE: this 
may break previously-working code!) next and prev methods
for PartialIterators and PartialListIterators no longer advance
and return themselves, they now return a new iterator at the
next/prev position, more like pointers, less like STL iterators,
easier to use.

- Improvements and cleanup in Analyzer, Filter, Oscillator,
FourierTransform, Synthesizer.

- Updated Mac project for CW7 and carbon.

- Added FrequencyReference class.

- Improved autoconfiguration.

-------------------------------------------------------
changes since 1.0beta5 release:

- The ReassignedSpectrum class has been modified to compute
the reassignment data using fewer transforms, and thus to 
run faster. 

- The files used by the GNU autotools to generate distribution
tarballs have been modified to include Mac OS-specific files in
the full source distribution.

-------------------------------------------------------
changes since 1.0beta4 release:

- The Distiller now incorporates the formerly-experimental sifting
process, that had been implemented in the Sieve class, which is 
now obsolete. The sifting process now is more predictable: it retains
the longest Partial of an overlapping pair, instead of the first one
it encountered.

- Loris has been autoconfiscated. This is a first attempt to use
the GNU autotools to configure Loris for Unix and Linux (and
windows?) builds.
