@@ -152,7 +152,6 @@
  */
 
 %{
-	#define LORIS_OPAQUE_POINTERS 0
 	#include<loris.h>
 %}
 
