@@ -1,6 +1,6 @@
 /* ----------------------------------------------------------------------------
  * This file was automatically generated by SWIG (http://www.swig.org).
- * Version 1.3.11u-20020205-0849
+ * Version 1.3.11u-20020207-1158
  * 
  * This file is not intended to be easily readable and contains a number of 
  * coding conventions designed to improve portability and efficiency. Do not make
@@ -1164,7 +1164,6 @@ SampleVector *AiffFile_samples(AiffFile *self){
 		return vec;
 	}
 
-	#define LORIS_OPAQUE_POINTERS 0
 	#include<loris.h>
 
 
