@@ -53,7 +53,6 @@
 #include "lorisException_pi.h"
 
 
-#define LORIS_OPAQUE_POINTERS 0
 #include "loris.h"
 #include <Notifier.h>
 
